--- a/composer.json
+++ b/composer.json
@@ -37,11 +37,11 @@
     ],
     "require": {
         "php": ">=7.4",
-        "illuminate/contracts": "^11.0||^10.0||^9.0||^8.0||^7.0||^6.0||^5.0"
+        "illuminate/contracts": "^12.0||^11.0||^10.0||^9.0||^8.0||^7.0||^6.0||^5.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^8.1.1||^7.10.0||^6.0||^5.0||^4.0||^3.2",
-        "orchestra/testbench": "^9.0.0||^8.22.0||^7.0||^6.0||^5.0||^4.0"
+        "orchestra/testbench": "^10.0||^9.0.0||^8.22.0||^7.0||^6.0||^5.0||^4.0"
     },
     "autoload": {
         "psr-4": {
